src/styles/partials/services-table.less
@import './table-symbols.less';

.services-table-container {
  background-color: @background-color-lighter;
  border-bottom: @default-rule;
}

.services-table-container table {
  // Hide on mobile, use alternate dom created by js instead
  @media screen and (max-width: @viewport-width-mobile) {
    display: none;
  }

  .content-container();
  .paragraph-mid();
  font-weight: @font-weight-regular;

  // equal column width
  width: 100%;
  table-layout: fixed;

  // header and footer (markdown does not support tfoot so using last-child as substitute)
  thead > tr,
  tfoot > tr,
  tbody > tr:last-child {
    font-weight: @font-weight-bold;

    // first column of header and footer are green
    td,
    th {
      &:first-child {
        color: @color-dark-green;
      }
    }
  }

  th:first-child {
    width: (2/7) * 100%;
  }

  td:first-child {
    .paragraph-large();
  }

  // Second column has green background
  td,
  th {
    background-color: @background-color-lighter;
    &:nth-child(2) {
      background-color: @background-color-base;
    }
  }

  td {
    .applySymbols();
  }

  // links
  a {
    color: @color-dark-green;
    text-decoration: underline;
  }

  .show-more-row {
    text-align: center;
    td {
      background-color: @background-color-base;
      text-align: inherit;
    }
  }

  .show-more-button {
    .textButton();
    padding: 0 @layout-grid-margin;
    position: relative;
    text-align: inherit;

    &::after {
      content: '';
      display: block;
      width: 16px;
      height: 16px;
      position: absolute;
      right: 0;
      top: calc(50% - (16px / 2));
      background: url('/assets/images/chevron.svg') no-repeat center center;
    }
  }

  &.show-all .show-more-button::after {
    transform: rotate(180deg);
  }

  // Hide rows after 6 rows
  &:not(.show-all) tr:nth-child(6) ~ tr:not(:last-child):not(.show-more-row) {
    display: none;
  }

  &.show-all th {
    position: sticky;
    top: 101px;
    z-index: 1;
  }
}

